test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_case_expr_with_stmts.draco
proc main() void : 

  a := case a1 incase a3 : a4:=0; a4 default : a7:=0; a7 esac;

corp;

