test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_case_expr_no_default.draco
proc main() void : 

  a := case a1 incase a3 : a4:=0; a4 esac;

corp;

